@@ -18,6 +18,7 @@ import java.io.Reader;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -1038,7 +1039,7 @@ public class Utils {
     public static URL toURL(String path) {
         URL url;
         try {
-            url = new URL(path);
+            url = new URI(path).toURL();
             url.openStream().close(); // catches well-formed but bogus URLs
         } catch (Exception e) {
             try {
